<resources>
    <string name="app_name">Recipe</string>
    <string name="loading">Loading</string>
    <string name="network_error">Network Error</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
</resources>